<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_category_dispaly_title">
        <Preference
            android:key="prefs_theme_color"
            android:summary="@string/settings_item_theme_color_summary"
            android:title="@string/settings_item_theme_color_title"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefs_is_night_mode"
            android:summary="@string/settings_item_is_night_mode_summary"
            android:title="@string/settings_item_is_night_mode_title"
            android:widgetLayout="@layout/layout_switch_preference_compat"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_grayscale_in_night_mode"
            android:summary="@string/settings_item_gray_scale_in_night_mode_summary"
            android:title="@string/settings_item_gray_scale_in_night_mode_title"
            android:widgetLayout="@layout/layout_switch_preference_compat"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_show_cover_img"
            android:summary="@string/settings_item_show_cover_img_summary"
            android:title="@string/settings_item_show_cover_img_title"
            android:widgetLayout="@layout/layout_switch_preference_compat"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_chapter_list_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_hide_redundant_chapter_title"
            android:summary="@string/settings_item_hide_redundant_chapter_title_summary"
            android:title="@string/settings_item_hide_redundant_chapter_title_title"
            android:widgetLayout="@layout/layout_switch_preference_compat"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_reading_title">

        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:key="prefs_read_view_scroll_mode"
            android:defaultValue="2"
            android:dialogTitle="@string/settings_item_font_size_dialog_title"
            android:entries="@array/scroll_mode_string_entries"
            android:entryValues="@array/scroll_mode_value_entries"
            android:summary="@string/settings_item_scroll_mode_summary"
            android:title="@string/settings_item_scroll_mode_title" />

        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:key="prefs_read_font_size"
            android:defaultValue="16"
            android:dialogTitle="@string/settings_item_font_size_dialog_title"
            android:entries="@array/readview_font_size_entries"
            android:entryValues="@array/readview_font_size_entries"
            android:summary="@string/settings_item_font_size_summary"
            android:title="@string/settings_item_font_size_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_other_title">
        <Preference
            android:key="prefs_about_changelog"
            android:summary="@string/settings_item_change_log_summary"
            android:title="@string/settings_item_change_log_title"/>
        <Preference
            android:key="prefs_about_version"
            android:summary=""
            android:title="@string/settings_item_version">
        </Preference>
        <Preference
            android:title="@string/settings_item_about_title">
            <intent
                android:targetPackage="org.cryse.novelreader"
                android:targetClass="org.cryse.novelreader.ui.SettingsActivity" >
                <extra android:name="type" android:value="about" />
                </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_debug_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_debug_enable_leak_canary"
            android:summary="@string/settings_item_leak_canary_summary"
            android:title="@string/settings_item_leak_canary_title"
            android:widgetLayout="@layout/layout_switch_preference_compat"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_debug_enable_crash_woodpecker"
            android:summary="@string/settings_item_crash_woodpecker_summary"
            android:title="@string/settings_item_crash_woodpecker_title"
            android:widgetLayout="@layout/layout_switch_preference_compat"/>
    </PreferenceCategory>
</PreferenceScreen>