<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_bottomsheet_chapter_prev" android:title="@string/bottom_sheet_item_chapter_prev" android:icon="@drawable/ic_menu_chapter_previous"/>
    <item android:id="@+id/menu_bottomsheet_reload" android:title="@string/bottom_sheet_item_reload" android:icon="@drawable/ic_menu_reload"/>
    <item android:id="@+id/menu_bottomsheet_changesrc" android:title="@string/bottom_sheet_item_change_src" android:icon="@drawable/ic_menu_change_src"/>
    <item android:id="@+id/menu_bottomsheet_chapter_next" android:title="@string/bottom_sheet_item_chapter_next" android:icon="@drawable/ic_menu_chapter_next"/>
    <item android:id="@+id/menu_bottomsheet_nightmode" android:title="@string/bottom_sheet_item_night_mode" android:icon="@drawable/ic_menu_night_mode"/>
    <item android:id="@+id/menu_bottomsheet_background_color" android:title="@string/bottom_sheet_item_read_background" android:icon="@drawable/ic_menu_color_palette"/>
    <item android:id="@+id/menu_bottomsheet_textsize" android:title="@string/bottom_sheet_item_font_size" android:icon="@drawable/ic_menu_text_font_size"/>
    <item android:id="@+id/menu_bottomsheet_pagecurl_mode" android:title="@string/bottom_sheet_item_page_curl_mode" android:icon="@drawable/ic_menu_page_curl_mode"/>
    <!--item android:id="@+id/menu_bottomsheet_back" android:title="@string/bottom_sheet_item_back" android:icon="@drawable/ic_menu_back"/-->
</menu>