<?xml version="1.0" encoding="utf-8"?>
<org.cryse.widget.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/smooth_theme_detail_bg_color"
    android:fillViewport="true"
    android:overScrollMode="never">

    <FrameLayout
        android:id="@+id/scroll_view_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">
        <!-- Background photo -->
        <FrameLayout
            android:id="@+id/session_photo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/session_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/smooth_theme_detail_bg_color"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/novel_details_extra_space_bottom"
            android:paddingRight="@dimen/keyline_1"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/novel_abstract"
                style="@style/TextBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail" />

            <HorizontalScrollView
                android:id="@+id/novel_tags_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:fadingEdgeLength="16dp"
                android:requiresFadingEdge="horizontal"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/novel_tags_container"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <TextView android:layout_width="match_parent"
                android:id="@+id/detail_abstract_header"
                android:clickable="true"
                android:focusable="true"
                android:layout_height="wrap_content"
                android:text="@string/novel_detail_abstract_header"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:visibility="gone"
                style="@style/NovelDetailSectionHeader" />

            <LinearLayout
                android:id="@+id/novel_brief_info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:paddingLeft="@dimen/keyline_1_minus_8dp">
                <TextView
                    android:id="@+id/detail_status_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextBody"/>
                <TextView
                    android:id="@+id/detail_chapter_count_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextBody"/>
                <TextView
                    android:id="@+id/detail_latest_chapter_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextBody"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/detail_achieve_block"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal"
                android:visibility="gone">

                <TextView android:layout_width="match_parent"
                    android:id="@+id/detail_achieve_header"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_height="wrap_content"
                    android:text="@string/novel_detail_achieve_header"
                    android:layout_marginLeft="@dimen/keyline_2_session_detail"
                    style="@style/NovelDetailSectionHeader" />

                <LinearLayout
                    android:id="@+id/detail_achieves_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/keyline_2_session_detail"
                    android:orientation="vertical" />
            </LinearLayout>
        </LinearLayout>

        <!-- Title/subtitle bar (floating; position determined at run time as the content view scrolls) -->
        <LinearLayout
            android:id="@+id/header_novel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <include layout="@layout/toolbar_without_custom_shadow" />

            <!-- Session title -->
            <TextView
                android:id="@+id/novel_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:layout_marginRight="@dimen/keyline_1"
                android:layout_marginBottom="0dp"
                android:ellipsize="end"
                android:lineSpacingMultiplier="1.1"
                android:maxLines="4"
                android:text="@string/placeholder_novel_details_title"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color_body1_white"
                android:textSize="@dimen/text_size_large" />

            <!-- Session subtitle -->
            <TextView
                android:id="@+id/novel_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:layout_marginRight="@dimen/keyline_1"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/placeholder_novel_details_subtitle"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color_caption_white"
                android:textSize="16sp" />

        </LinearLayout>


        <org.cryse.widget.MaterialProgressBar
            android:id="@+id/detail_loading_progress"
            android:layout_width="@dimen/detail_progress_height"
            android:layout_height="@dimen/detail_progress_height"
            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
            android:indeterminate="true"
            android:padding="8dp"
            android:visibility="visible"/>

        <!-- FAB -->
        <include layout="@layout/include_add_fab" />

    </FrameLayout>
</org.cryse.widget.ObservableScrollView>